# robosplatter

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
assets/: _download.py
assets/example_assert/object/: desk2.ply  golden_cup.ply
assets/example_assert/scene/: lab_table.ply  office.ply
config/: gs_data_basic.yaml  gs_data_fg_bg_mix.yaml
robo_splatter/models/: __init__.py  basic.py  camera.py  gaussians.py
robo_splatter/render/: __init__.py  scenes.py
robo_splatter/scripts/: depth_to_normal.py  render_scene.py  render_scene_batch.py
robo_splatter/test/: directi_trans_test.py
robo_splatter/utils/: direct_transform.py  helper.py  misc.py
scripts/lint/: check_lint.py
scripts/lint_src/: lint.py
