[project]
name = "robo_splatter"
version = "0.1.0"
description = "Gaussian Splatting for Robotic Simulation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses-json>=0.6.7",
    "gsplat>=1.5.3",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "opencv-python-headless>=4.12.0.88",
    "plyfile>=1.1.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["robo_splatter"]

[project.optional-dependencies]
dev = [
    "pydocstyle",
    "black",
    "isort",
    "pytest",
]

[project.scripts]
render-cli = "robo_splatter.scripts.render_scene:entrypoint"

[tool.pydocstyle]
match = '(?!test_).*(?!_pb2)\.py'
match-dir = '^(?!(raw|projects|thirdparty)$)[\w.-]+$'
convention = "google"
add-ignore = 'D104,D107,D202,D105,D100,D102,D103,D101,E203,W503'

[tool.black]
line-length = 79
exclude = "thirdparty"

[tool.isort]
line_length = 79
profile = 'black'
no_lines_before = 'FIRSTPARTY'
known_first_party = ['robo_splatter']
skip = "thirdparty/"
